add a private policy for halfway

--- a/nginx/cocozzello.com.conf
+++ b/nginx/cocozzello.com.conf
@@ -1,6 +1,6 @@
 server {
   listen        80;
-  server_name   cocozzello.com;
+  server_name   tom.cocozzello.com;
 
   location / {
     proxy_pass  http://128.199.7.217:8080;
@@ -13,5 +13,16 @@ server {
 
   location / {
     proxy_pass  http://128.199.7.217:8081;
+  }
+}
+
+server {
+  listen        80;
+  server_name   cocozzello.com;
+
+  location / {
+    proxy_pass  https://dcd98d9b-8f41.minted.us;
+    proxy_ssl_server_name on;
+    proxy_ssl_session_reuse off;
   }
 }
